--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College of Engineering Perumon</title>
+    <style>
+        h2{
+            color: rgb(2, 2, 66);
+        }
+    </style>
 </head>
 <body>
     <img src="https://www.perumonec.ac.in/assets/img/topbar.png">
     <h1 style="text-align: center;">A CAMPUS LIFE THAT INSPIRES, ENRICHES AND EMPOWERS</h1>
-    <img src="clg.jpg" alt="college image" width="1450px" height="550px">
+    <img src="clg.jpg" alt="college image" width="1450px" height="550px"><br><br>
     <table border="1">
         <tr>
             <td>News</td>
@@ -28,5 +33,34 @@
         <li>Electrical & Electronics Engineering</li>
         <li>Mechanical Engineering</li>
     </ul>
+    <a href="https://cep.etlab.in/user/login">Click here to open etlab</a>
+    <h2>Form</h2>
+    <form action="#" method="get">
+        <label for="name">Name: </label>
+        <input type="text" id="name" required placeholder="Your name"><br><br>
+        <label for="email">Email: </label>
+        <input type="email" id="email" required placeholder="xyz@gmail.com"><br><br>
+        <p>Branch:</p>
+        <input type="radio" id="cse" name="branch" value="CSE">
+        <label for="cse">CSE</label><br>
+        <input type="radio" id="ece" name="branch" value="ECE">
+        <label for="ece">ECE</label><br>
+        <input type="radio" id="eee" name="branch" value="EEE">
+        <label for="eee">EEE</label><br>
+        <input type="radio" id="me" name="branch" value="ME">
+        <label for="me">ME</label><br><br>
+        <p>Feedback related to:</p>
+        <input type="checkbox" id="teaching" name="feedbackArea" value="Teaching">
+        <label for="teaching">Teaching Quality</label><br>
+        <input type="checkbox" id="infra" name="feedbackArea" value="Infrastructure">
+        <label for="infra">Infrastructure</label><br>
+        <input type="checkbox" id="support" name="feedbackArea" value="Student Support">
+        <label for="support">Student Support</label><br>
+        <input type="checkbox" id="events" name="feedbackArea" value="Events">
+        <label for="events">College Events</label><br><br>
+        <label for="feedback">Feedback: </label>
+        <input type="text" id="feedback" required placeholder="Write your feedback"><br><br>
+        <input type="submit" name="submit" value="Submit">
+    </form>
 </body>
 </html>
